<resources>
    <string name="app_name">MealsApp</string>
    <string name="title_activity_nav_drawer">MealsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="resep_makanan">Resep Makanan</string>

    <string name="no_internet_connection">No internet connection.</string>
    <string name="ingredients">Ingredients</string>
    <string name="how_to_cook">How To Cook</string>
    <string name="osg3group2">Osg3Group2</string>
    <string name="retry">Retry</string>
    <string name="about">MealsApp adalah Aplikasi yang dibuat untuk menuntaskan Final Project Eudeka Batch 3</string>
    <string name="aplikasi_ini_dibuat_oleh">Nama Kelompok</string>
    <string name="creator">1. Helmi/zhikariz \n2. muasdev/muasstepa \n3. jazuli muhtar \n4. Rizki Maulana \n5. Wisnu</string>
    <string name="Pembimbing">Ibnu Sina Wardy</string>
    <string name="special_thanks_to">Special Thanks To Our Mentor</string>
</resources>
